# FRI-2024-DF-seminar

./: .gitignore  README.md
design/: README.md
test_data/EventTranscript_VM/: EventTranscript.db-wal
test_data/VM/Diagnosis/: EventStore.db  EventStore.db-shm  EventStore.db-wal
test_data/VM/Diagnosis/DownloadedSettings/: telemetry.ASM-WindowsDefault.json  utc.allow.json  utc.app.json  utc.tracing.json
test_data/VM/Diagnosis/EventTranscript/: EventTranscript.db  EventTranscript.db-shm  EventTranscript.db-wal
test_data/VM/Diagnosis/ScenariosSqlStore/: EventStore.db  EventStore.db-shm
test_data/VM/Diagnosis/TenantStorage/P-ARIA/: EventStore.db  EventStore.db-shm  EventStore.db-wal
test_data/VM2/: EventTranscript(1).db
test_data/VM3/: EventTranscript.db
test_data/VM4/: EventTranscript.db
viewer/: package-lock.json  package.json
viewer/html/: index.html
viewer/src/: server.ts
viewer/src/static/: script.ts
viewer/static/: style.css
winspy/: .gitignore  Cargo.toml
winspy/src/: detectors.rs  logging.rs  main.rs  models.rs  reader.rs
winspy/src/detectors/: application.rs  battery.rs  edge.rs  mod.rs  usb.rs
winspy/src/models/: category.rs  error.rs  event.rs  event_category.rs  macros.rs  mod.rs  ms_store_event.rs  persisted_event.rs  producer.rs  provider_group.rs  tag.rs  tag_description.rs  windows_software_client.rs
