[package]
name = "winspy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Debugging, logging
miette = { version = "7.1.0", features = ["fancy"] }
thiserror = "1.0.57"

# Datetime
chrono = "0.4.38"

# Parallelism
tokio = { version = "1.37.0" }

# Data management
serde = "1.0"
serde_json = "1.0"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "sqlite"] }