[package]
name = "winspy"
version = "0.1.0"
edition = "2021"


[dependencies]
# Debugging, logging
miette = { version = "7.1.0", features = ["fancy"] }
thiserror = "1.0.57"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-appender = "0.2.3"

# Cmd arguments
argh = "0.1.12"

# Datetime
chrono = "0.4.38"

# Parallelism
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros"] }

# Data management and conversion
serde = "1.0"
serde_json = "1.0"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "sqlite", "chrono"] }
